# organizeme

./: .auto-claude-status  .claude_settings.json  .env  .env.example  .gitignore  CHANGELOG.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
.auto-claude/: project_index.json
.auto-claude/roadmap/: roadmap.json
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: config.rs  git.rs  lib.rs  main.rs  scanner.rs  shell.rs  tags.rs
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
data/: ppm.db
spec/: api_spec.md  data_model.md  deployment.md  product_spec.md  roadmap.md  security.md  system_architecture.md  ui_spec.md
src/app/: layout.tsx  page.tsx
src/components/: archive-button.tsx  dashboard-content.tsx  dashboard-settings-dialog.tsx  favorite-button.tsx  markdown-renderer.tsx  pagination-controls.tsx  project-card.tsx  project-table.tsx  project-tags-section.tsx  search-bar.tsx  status-filter.tsx  tag-filter.tsx  tag-input.tsx
src/hooks/: use-archive.ts  use-dashboard-settings.ts  use-favorites.ts  use-pagination.ts  use-status-filters.ts
src/lib/: actions.ts  archive.ts  favorites.ts  git-utils.ts  project-scanner.ts  sort-utils.ts  status-filters.ts  tag-storage.ts
src/types/: project.ts
web/api/: migrate_schema.py
(+54 files in other folders)
